--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Avilys
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=mob_rysiai_avilys
 DB_USERNAME=root
 DB_PASSWORD=
 
